# GemmaAi

./: .gitignore  CODE_REVIEW.md  JULES_PROMPT.md  build_jules_v2.py  build_julia_v2.py  build_julia_v3.py  fix_and_launch.py  system_assessment.js
DarcyAi/: README.md  settings.gradle.kts
DarcyAi/app/: build.gradle.kts
DarcyAi/app/src/main/: AndroidManifest.xml
DarcyAi/app/src/main/java/com/darcyai/: MainActivity.kt
DarcyAi/app/src/main/java/com/darcyai/core/: HiveManager.kt
DarcyAi/app/src/main/res/drawable/: ic_launcher_foreground.xml
DarcyAi/app/src/main/res/values/: themes.xml
android_platform/: README.md  requirements.txt
android_platform/android/: gradle.properties  gradlew.bat  settings.gradle.kts
android_platform/android/app/: build.gradle.kts
android_platform/android/app/src/main/: AndroidManifest.xml
android_platform/android/app/src/main/res/values/: strings.xml  themes.xml
android_platform/android/gradle/: libs.versions.toml
android_platform/src/: main.py
assistant-platform/: .env.template  .gitignore  ANDROID_GUIDE.md  LICENSE  README.md  gpu_check.py  main.py  pyproject.toml  requirements.txt  web_ui.py
assistant-platform/app/core/: curator.py  gpu_manager.py  registry.py  specialist.py
assistant-platform/app/prompts/: personas.py
assistant-platform/app/tools/: devourer.py
assistant-platform/docs/: jules_bridge_guide.md
assistant-platform/tests/: test_core.py
jules_integration/: .env  index.html  package-lock.json  package.json
jules_integration/src/: main.js  style.css
(+13 files in other folders)
