[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jules-assistant-platform"
version = "2.0.0"
description = "A modular AI assistant platform with toxicologist persona and deep research capabilities."
readme = "README.md"
authors = [
    { name = "Jules Team" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "llama-cpp-python>=0.2.77",
    "numpy",
    "pydantic>=2.0",
    "gradio>=4.0.0",
    "llama-index-core",
    "llama-index-embeddings-huggingface",
    "llama-index-vector-stores-chroma",
    "python-dotenv",
    "pyyaml",
    "colorama"
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/example/jules-assistant-platform"
